<resources>
    <string name="heure">Heure</string>
    <string name="app_name">Yevos</string>
    <string name="num_diebold"># Diebold</string>
    <string name="num_desj"># Desjardins</string>
    <string name="nom_tech">Nom Tech</string>
    <string name="nom_eta">Nom Établissement</string>
    <string name="module">Module</string>
    <string name="travail">Travail</string>
    <string-array name="compagnies_array">
        <item>CPU</item>
        <item>Compucom</item>
        <item>Compugen</item>
        <item>Diebold</item>
        <item>Maxwell</item>
        <item>Multitech</item>
        <item>MSC</item>
        <item>NCR</item>
        <item>Progitech</item>
        <item>Ricoh</item>
    </string-array>
    <string-array name="type_fermeture">
        <item>Call in</item>
        <item>Mise a jour</item>
        <item>Suspend</item>
        <item>Fermeture</item>
    </string-array>
    <string-array name="garde">
        <item>Jour de semaine</item>
        <item>Garde soir / fin de semaine</item>
    </string-array>
    <string-array name="heures_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
    </string-array>
    <string-array name="multitech_operation">
        <item>Install</item>
        <item>Deinstall</item>
        <item>Repair on site</item>
        <item>DOA</item>
        <item>Lost</item>
    </string-array>
    <string-array name="multitech_type">
        <item>5310 EMV</item>
        <item>7780 EMV</item>
        <item>Base 7780</item>
        <item>Base IWL220</item>
        <item>Base IWL250</item>
        <item>Chargeur IWL</item>
        <item>ICM122-ICMP</item>
        <item>ICT220_M16</item>
        <item>ICT220_M32</item>
        <item>ICT250_M16</item>
        <item>ICT250_M32</item>
        <item>IPP320_V2</item>
        <item>IPP320_V3</item>
        <item>IWL220_M16</item>
        <item>IWL220_M32</item>
        <item>IWL250_M16</item>
        <item>IWL250_M32</item>
        <item>SIM Card</item>
    </string-array>
    <string-array name="Multitech_Call">
        <item>Call</item>
        <item>Install</item>
        <item>Deinstall</item>
    </string-array>
    <string-array name="Multitech_probleme">
        <item>A-Aucun probleme sur place</item>
        <item>B-Probleme alimentation</item>
        <item>C-Probleme imprimante</item>
        <item>D-Probleme afficheur</item>
        <item>E-Probeme signal</item>
        <item>F-Erreur communication</item>
        <item>G-Clavier (touche bloque,colle)</item>
        <item>H-Lecteur carte a puce</item>
        <item>I-Lecteur sans contact</item>
        <item>J-Lecteur magnetique</item>
        <item>K-Hardware attack</item>
        <item>L-Alert irruption</item>
        <item>M-Crash info</item>
        <item>N-Cles de securite</item>
        <item>O-Erreur PDV</item>
        <item>P-TRX en double\renversement</item>
        <item>Q-TPV gele</item>
        <item>R-Clavier inaccessible</item>
        <item>S-Equipement endommage</item>
        <item>T-Usage abusif</item>
        <item>U-Doublon</item>
        <item>V-Vole</item>
        <item>W-Fraude</item>
        <item>X-Mauvaise version</item>
        <item>Y-Annule(Bell,Marchand,Etc...)</item>
    </string-array>
    <string-array name="Multitech_Action">
        <item>A-Aucune Action</item>
        <item>B-Remplacer</item>
        <item>C-Remplacer(Exige)</item>
        <item>D-Configurer</item>
        <item>E-Reparer sur place</item>
        <item>F-Referer telecom</item>
        <item>G-Referer electrique</item>
        <item>H-Referer caisse</item>
    </string-array>
    <string-array name="Multitech_Equipement">
        <item>A-Terminal</item>
        <item>B-Clavier</item>
        <item>C-Base</item>
        <item>D-Cable tel</item>
        <item>E-Cable ip</item>
        <item>F-Cable caisse</item>
        <item>G-Magic box</item>
        <item>H-Cable clavier ext</item>
        <item>I-SIM</item>
        <item>J-Bloc d\'alimentation</item>
        <item>K-Batterie</item>
        <item>L-Mandarin</item>
        <item>M-Environnement client</item>
        <item>N-N/A</item>
    </string-array>
    <string name="title_activity_aide_memoire_diebold">Aide Memoire Diebold</string>
    <string name="aidememoireDiebold">
        "<b><u>Réception</u></b>\nConfirmer par courriel et donner ETA"
        "\n\nGrand-Remous et Messines ont besoin de la sécurité, faire la demande par téléphone au 1-888-877-8866 opt. 1 et 5"
        "\n\n\n<b><u>Bon de travail</u></b>\n"
        "Pad Diebold avec le bavard Bureautech."
        "\n\n\n<b><u>Call in</u></b>\n"
        "Appeler le 1-888-877-8866 opt. 1 et 5 pour donner l’heure d’arrivée."
        "\n\n<b><font color="red">****** </font></b>Si l’appel est un « first line » et que vous devez prendre plus de 45 minutes pour régler le problème, il faut fermer l’appel avec Diebold SEULEMENT et faire ouvrir un « second line » au 1-855-201-4371.<b><font color="red"> ******</font></b>"
        "\n\n\n<b><u>Support</u></b>\n"
        "Appeler le centre d’appels Diebold et demandez à parler à un support technique au 1-888-877-8866 opt 1 et 5"
        "\nOpteva : Marcel Samson - 514-292-4584 ou Pascal R - 514-292-4843"
        "\nWincor : Martin Lefebvre - 514-238-0470 ou Kenny - 514-248-4312"
        "\n\n\n<b><u>Commande de pièces</u></b>\n"
        "Les commandes de pièces se font par courriel avec partscanada@dieboldnixdorf.com (il est mieux de valider la pièce avec un support technique)."
        "\n\n\n<b><u>Call out et fermeture</u></b>\n"
        "Envoyer courriel à fermeture_tech.gm@desjardins.com et MTL_Escalation@dieboldnixdorf.com mettre en copie dispatch1@bureautech.ca et Donner numéro de pointeur de Desjardins"
        "\n\n\n<b><u>Varia</u></b>\n"
        "090 4319"
        "\n\n212 - Mani"
        "\n380 - Madone"
        "\n381 - Boulevard"
        "\n382 - L-d-É"
        "\n383 - Barrette"
        "\n384 - N-d-Laus"
        "\n\n\n\n\n\n\n"
    </string>
    <string name="aidememoireMultitech">
        "<b><u>Réception</u></b>\nConfirmer par courriel et donner ETA"
        "\nEnvoyer un eta à Service.ca@ingenico.com et mettre en copie customerservice@multitechservices.ca ainsi que dispatch1@bureautech.ca"
        "\n\n\n<b><u>Bon de travail</u></b>\n"
        "Bon de travail MULTITECH."
        "\n\n<b><font color="red">****** </font></b>Si vous dépassez 30 Minutes, il est très important de contacté Bell Desjardins pour les informés de votre problème et de noter le nom et l’heure de la personne avec qui vous avez parlé et il faut le faire si nécessaire a <font color="red"><u>chaque 30 minutes</u></font> sinon nous ne serons pas payer pour le dépassement de temps.<b><font color="red"> ******</font></b>"
        "\n\nTous les équipements DOA doivent être validé par Agope au téléphone en le contactant au 1-800-363-3356 option 3."
        "\n\nSi vous ne pouvez pas compléter votre appel, il faut faire une mise à jour pour avertir que nous allons revenir pour finaliser l’appel."
        "\n\n\n<b><u>Call in</u></b>\n"
        "Aucun Call in nécessaire pour ce sous-traitant."
        "\n\n\n<b><u>Support</u></b>\n"
        "Agob au 1-800-363-3356 option 3"
        "\n\n\n<b><u>Call out et fermeture</u></b>\n"
        "Envoyer la fermeture par courriel directement avec le téléphone de garde à Service.ca@ingenico.com et mettre en copie customerservice@multitechservices.ca ainsi que dispatch1@bureautech.ca"
        "\n\n\n<b><u>Varia</u></b>\n"
        "\nCode Technicien - CDTC"
        "\nCode Autonome IPP320 pour accès aux menus - Bouton Jaune et ensuite 0"
        "\n\nFaire attention adresse IP et Port du comm PDV pour les IWL220"
        "\n\nAlert Irruption = changer automatiquement la batterie et le TPV"
        "\n\nICT250 en Dial Up, préparer en atelier ou s\'assurer que le flag du téléchargement n\'est pas mis avec Bell"
        "\n\n\n\n\n\n\n\n\n"
    </string>
    <string name="aidememoireCPU">
        "<b><u>Réception</u></b>\nConfirmer par courriel et donner ETA"
        "\nLes appels de Tremblants sont hors de notre zone mais on les fait si ça n\'impacte pas le reste de la garde"
        "\n\n\n<b><u>Bon de travail</u></b>\n"
        "\nBon de travail CPU envoyé par courriel à imprimer au bureau. Ne pas oublier de remplir le Bavard Bureautech"
        "\n\n<b><font color="red">****** </font></b>Si déploiement ou nouvelles installations Tellus, il faut prendre pad (sur étagère bon de travail dispatch) et remplir en plus du bon de travail. Il faut envoyer le bon de travail à BONTELUS@CPU.CA une fois l’appel finalisé.<b><font color="red"> ******</font></b>"
        "\n\n\n<b><u>Call in</u></b>\n"
        "\nPar l\'intranet de CPU."
        "\nGénéral : https://intranet.cpu.qc.ca/intranet/stcpu/"
        "\nJean-Coutu : https://intranet.cpu.qc.ca/intranet/pjc/"
        "\nUser : bureautech laurentides - Password : 974BUR265"
        "\n\nMcDonald : intranet CPU + Road Warrior Fujitsu : https://iportal.shopfujitsu.com/portal/page/portal/RoadWarrior/Login"
        "\nLogin : inclus dans l\'appel Fujitsu (ex: cpuottawa1@cpu.ca   Password : welcome1"
        "\nLogin Bureautech : cpumlaurier@cpu.ca Password : welcome1"
        "\n\n\n<b><u>Support</u></b>\n"
        "\nTelus = CPU 1-888-681-6974 Option 777"
        "\nAutre contrat CPU = 1-888-681-6974 Option 888"
        "\nSAQ = Centre OTIS 1-514-254-2848"
        "\nDesjardins Assurances = Sébastien au 1-514-281-7000 poste 5552225 (cell = 1-514-588-4650)."
        "\n\n\n<b><u>Call out et fermeture</u></b>\n"
        "\nIntranet de CPU comme pour le Call In"
        "\n\nMcDonald ne pas oublier de le faire dans Road Warrior également"
        "\n\n\n<b><u>Varia</u></b>\n"
        "\nPour call Tim Hortons sur les TV de menu"
        "\nEn arrivant sur site, envoyer un email de call in a contentteam@sicom.com"
        "\nInclure le numero du restaurant, votre nom et votre # de cellulaire, ensuite le support vous contactera (en anglais)"
        "\n\nMcDonald - pour entrer dans le menu gérant"
        "\nUser : 9999     Pass : JMA (dernier chiffre du jour + mois + année)"
        "\nExemple : 12 Avril 2018 le Pass est 842"
        "\n\n\n\n\n\n\n\n\n"
    </string>
    <string name="aidememoireCompucom">
        "<b><u>Réception</u></b>\nConfirmer par courriel et donner ETA"
        "\n\n\n<b><u>Bon de travail</u></b>\n"
        "\nBon de travail COMPUCOM avec le Bavard Bureautech"
        "\n\n\n<b><u>Call in</u></b>\n"
        "\nPendant les heures de bureau, appeler le dispatch Bureautech."
        "\nN.B. : On n’en fait pas pour ce sous-traitant le soir et les fins de semaine."
        "\n\n\n<b><u>Support</u></b>\n"
        "\n418-877-5182 ou 1-800-268-4861 ext #2"
        "\nYves Baillargeon = 1-800-268-4867 poste 78820  / EN dehors des heures de bureau = 1-800-668-6574"
        "\nShell = 1-416-456-5710"
        "\n\n\n<b><u>Call out et fermeture</u></b>\n"
        "\nPendant les heures de bureau, appeler le dispatch Bureautech."
        "\nLe soir et les fins de semaine on ferme l’appel avec le support technique.  Ou par courriel à quebecsubscanada@compucom.com et mettre dispatch1@bureautech.ca  en copie indiquer dans votre message que le document de fermeture est a suivre."
        "\n(Noter le nom de la personne sur votre Bavard Bureautech)."
        "\n\n\n\n\n\n\n\n\n"
    </string>
</resources>