<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Diebold_Call_In">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="87dp"
            android:layout_height="29dp"
            android:layout_marginStart="16dp"
            android:text="# Diebold"
            app:layout_constraintBaseline_toBaselineOf="@+id/numDiebold"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/numDiebold"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/num_diebold"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/nomEta" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="85dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:text="# Desjardins"
            app:layout_constraintBaseline_toBaselineOf="@+id/numDesj"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/numDesj"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/num_desj"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/numDiebold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Départ"
            app:layout_constraintBaseline_toBaselineOf="@+id/heureDepart"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/heureDepart"
            android:layout_width="106dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="@string/heure"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/heureDebut"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/numDesj"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Début"
            app:layout_constraintBaseline_toBaselineOf="@+id/heureDebut"
            app:layout_constraintStart_toEndOf="@+id/heureDepart" />

        <EditText
            android:id="@+id/heureDebut"
            android:layout_width="111dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/heure"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/numDesj" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="Fin"
            app:layout_constraintBaseline_toBaselineOf="@+id/heureFin"
            app:layout_constraintEnd_toStartOf="@+id/heureFin"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/heureFin"
            android:layout_width="105dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/heure"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/heureDepart"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/heureDepart"
            app:layout_constraintTop_toBottomOf="@+id/heureDepart" />

        <EditText
            android:id="@+id/heureRetour"
            android:layout_width="112dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/heure"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/heureDebut"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/heureDebut" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:text="Retour"
            app:layout_constraintBaseline_toBaselineOf="@+id/heureRetour"
            app:layout_constraintStart_toEndOf="@+id/heureFin" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Nom établissement"
            app:layout_constraintBaseline_toBaselineOf="@+id/nomEta"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/nomEta"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/nom_eta"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/nomTech" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Nom Tech"
            app:layout_constraintBaseline_toBaselineOf="@+id/nomTech"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/nomTech"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/nom_tech"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Module"
            app:layout_constraintBaseline_toBaselineOf="@+id/nomModule"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/nomModule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/module"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/heureFin" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Travail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomModule" />

        <EditText
            android:id="@+id/textTravail"
            android:layout_width="0dp"
            android:layout_height="247dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/travail"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/nomModule" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTravail" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>